--- a/Binary Raster Automated Sections.ipynb
+++ b/Binary Raster Automated Sections.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,17 +22,17 @@
     "arcpy.env.overwriteOutput = True\n",
     "\n",
     "## PART 1: File directories of landsat image and your project folder, change these. \n",
-    "landsatimage = r\"D:\\civicsat\\landsatcivic-20250908T185205Z-1-001\\landsatcivic\\l82018.tif\" #Direct to your landsat image here\n",
-    "folder= r\"C:\\Users\\jon20\\OneDrive\\Documents\\ArcGIS\\Projects\\CIVIC\" #Direct to your project folder here. Usually it is My Documents\\ArcGIS\\Projects\\*Project name*\n",
+    "landsatimage = r\"C:\\Users\\jonlim\\Documents\\ArcGIS\\Packages\\Landsat 1999-2024 Quinhagak_3cce6a\\commondata\\raster_data\\l72000.tif\" #Direct to your landsat image here\n",
+    "folder= r\"F:\\Quinhagak\\Quinhagak\" #Direct to your project folder here. Usually it is My Documents\\ArcGIS\\Projects\\*Project name*\n",
     "\n",
     "## PART 2: Specify landcover value thresholds\n",
-    "watermin = -0.01\n",
-    "watermax = 0.13\n",
-    "landmin = 0.131\n",
-    "landmax = 0.545\n",
+    "watermin = 0.016\n",
+    "watermax = 0.11\n",
+    "landmin = 0.111\n",
+    "landmax = 0.399\n",
     "\n",
     "## PART 3: Specify the NIR band. It is 5 for for Landsat-8, 4 for Landsat-7\n",
-    "band = 5\n",
+    "band = 4\n",
     "\n",
     "# Other variables, don't touch\n",
     "remapString = f\"{watermin} {watermax} 1;{landmin} {landmax} 0\"\n",
@@ -72,41 +72,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div class='gpresult'><h2>Messages</h2><div id='messages'>Start Time: Tuesday, October 14, 2025 8:02:46 AM<br>Succeeded at Tuesday, October 14, 2025 8:02:46 AM (Elapsed Time: 0.19 seconds)<br></div><div id = 'default' /></div></div>"
-      ],
-      "text/plain": [
-       "<Result 'memory\\\\tempshape'>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Welcome to Module 2\n",
     "\n",
     "## PART 1: Input your isolated river shapefile (IRS)\n",
-    "river= r\"C:\\Users\\jon20\\OneDrive\\Documents\\ArcGIS\\Projects\\CIVIC\\CIVIC.gdb\\shapefiletemp_ExportFeatures\"\n",
+    "river= r\"F:\\Quinhagak\\Quinhagak\\Default.gdb\\irs_2000\"\n",
     "\n",
     "## PART 2: Direct to folder where you want to save your final outputs, a binary raster and its corresponding vector files. Don't put it in a geodatabase.\n",
-    "finaloutput= r\"C:\\Users\\jon20\\OneDrive\\Documents\\ArcGIS\\Projects\\CIVIC\\final\"\n",
+    "finaloutput= r\"F:\\Quinhagak\\Quinhagak\\final\"\n",
     "\n",
-    "## PART 3: Name your final outputs. \n",
-    "binaryvector= \"test\"\n",
-    "binaryraster= \"test.tif\" # Don't forget the raster file extension, .tif is preferred for most applications. \n",
+    "## PART 3: Name your final outputs. They cannot have the same name, hence the v and r at the end of the filename\n",
+    "binaryvector= \"L72000v\"\n",
+    "binaryraster= \"L72000r.tif\" # Don't forget the raster file extension, .tif is preferred for most applications. \n",
     "\n",
     "# Other variables, don't touch\n",
     "temperase= os.path.join(folder, \"temperase\")\n",
     "rivermerged= os.path.join(folder, \"rivermerged\")\n",
-    "bv= r\"memory\\tempshape\"\n",
-    "br= r\"memory\\br\"\n",
+    "bv= os.path.join(finaloutput, binaryvector)\n",
+    "br= os.path.join(finaloutput, binaryraster)\n",
     "\n",
     "# Dissolve river shapefile and assign gridcode of 1\n",
     "arcpy.env.addOutputsToMap = False\n",
@@ -135,15 +121,16 @@
  "metadata": {
   "kernelspec": {
    "display_name": "ArcGISPro",
-   "language": "Python",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
    "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
